testsuite/bsc.interra/bugs/bugID313/bug.bsv.bsc-out.expected
checking package dependencies
Error: "bug.bsv", line 8, column 45: (P0085)
  Function `myFunc' has duplicate argument `abc' (previous declaration at
  "bug.bsv", line 8, column 33)
